# Raven2VM

ravenOpen/: Makedefs  Makedefs.in  Makefile  Makefile.in  Makerules  Makerules.in  README  aclocal.m4  acsite.m4  automaint  config.status  configure  configure.ac  goraven  updateEq
ravenOpen/include/actions/: act.create.h  act.h  act.informative.h  auction.h  command_list.h  disasters.h  holidays.h  movement.h  multi.h  objact.h  other.h  quest.h
ravenOpen/include/general/: color.h  comm.h  handler.h  mudconfig.h  objsave.h  rmath.h  structs.h  sysdep.h
ravenOpen/include/magic/: berserk.h  blackjack.h  brain.h  butcher.h  calm.h  camp.h  circle.h  cut_throat.h  envenom.h  escape.h  expose.h  falsetrail.h  familiarize.h  feed.h  flashbang.h  hide.h  invigorate.h  knock.h  magic.h  missile.h  redoubt.h  rescue.h  retarget.h  shadowmist.h  shadowstep.h  shoot.h  sing.h  skills.h  spell_parser.h  spells.h  spy.h  stalk.h  throw.h
ravenOpen/include/olc/: cedit.h  genmob.h  genolc.h  hedit.h  oasis_delete.h  oedit.h  qedit.h
ravenOpen/include/scripts/: dg_olc.h
ravenOpen/include/specials/: assign.h  beholder.h  bloodbowl.h  boards.h  castle.h  classes.h  dice.h  flag_game.h  guard.h  healer.h  lockers.h  mobact.h  qpshop.h  renames.h  reward.h  scatter.h  seek.h  superAggr.h  ten_trials.h
ravenOpen/include/util/: bsd-snprintf.h  strlcpy.h  weather.h  zmalloc.h
ravenOpen/src/: Makefile  Makefile.in
ravenOpen/src/lib/: Makefile  Makefile.in
ravenOpen/src/lib/actions/: .act.alias.d  .act.clan.d  .act.create.d  .act.informative.d  .act.social.d  .auction.d  .ban.d  .combat.d  .commact.d  .disasters.d  .fight.d  .holidays.d  .insert_items.d  .interpreter.d  .movement.d  .multi.d  .objact.d  .offensive.d  .other.d  .outlaw.d  .quest.d  .suffer.d  .wizard.d  Makefile  Makefile.in  act.alias.c  act.alias.h  act.clan.c  act.clan.h  act.create.c  act.h  act.informative.c  act.social.c  act.social.h  auction.c  ban.c  ban.h  combat.c  combat.h  commact.c  (+23 more)
ravenOpen/src/lib/general/: .chores.d  .class.d  .color.d  .comm.d  .db.d  .handler.d  .modify.d  .mudconfig.d  .mudlimits.d  .objsave.d  .rmath.d  .structs.d  Makefile  Makefile.in  chores.c  chores.h  class.c  class.h  color.c  comm.c  conf.h  conf.h.in  db.c  db.h  handler.c  modify.c  modify.h  mudconfig.c  mudlimits.c  mudlimits.h  newclass.c  objsave.c  rmath.c  structs.c  structs.h
ravenOpen/src/lib/magic/: .aggressive.d  .ambush.d  .backstab.d  .befriend.d  .berserk.d  .blackjack.d  .blind_strike.d  .block.d  .brain.d  .breathe.d  .butcher.d  .calm.d  .camp.d  .charge.d  .circle.d  .convert.d  .cower.d  .cut_throat.d  .delusion.d  .devour.d  .disarm.d  .distract.d  .doorbash.d  .dust.d  .envenom.d  .epic.d  .escape.d  .expose.d  .falsetrail.d  .familiarize.d  .feed.d  .feign_death.d  .fishing.d  .flashbang.d  .gore.d  .gut.d  .hands.d  .hide.d  .instant_poison.d  .invigorate.d  (+136 more)
ravenOpen/src/lib/olc/: .cedit.d  .copy.d  .genolc.d  .hedit.d  .medit.d  .oasis_delete.d  .oedit.d  .olc.d  .qedit.d  .redit.d  .sedit.d  .tedit.d  .zedit.d  Makefile  Makefile.in  cedit.c  copy.c  copy.h  genmob.c  genobj.c  genolc.c  genqst.c  genqst.h  genshp.c  genshp.h  genwld.c  genzon.c  genzon.h  hedit.c  medit.c  medit.h  oasis_copy.c  oasis_copy.h  oasis_delete.c  oasis_list.c  oasis_list.h  oedit.c  olc.c  olc.h  qedit.c  (+8 more)
ravenOpen/src/lib/scripts/: .dg_comm.d  .dg_db_scripts.d  .dg_event.d  .dg_handler.d  .dg_misc.d  .dg_mobcmd.d  .dg_objcmd.d  .dg_olc.d  .dg_scripts.d  .dg_triggers.d  .dg_wldcmd.d  Makefile  Makefile.in  dg_comm.c  dg_comm.c~  dg_db_scripts.c  dg_event.c  dg_event.h  dg_handler.c  dg_misc.c  dg_mobcmd.c  dg_objcmd.c  dg_olc.c  dg_scripts.c  dg_scripts.h  dg_triggers.c  dg_wldcmd.c
ravenOpen/src/lib/socials/: README  desoc  interp_socials.c  mksocials  socials  socials.doc
ravenOpen/src/lib/specials/: .advance.d  .assign.d  .beholder.d  .bloodbowl.d  .boards.d  .castle.d  .classes.d  .combspec.d  .dice.d  .elie.d  .flag_game.d  .forger.d  .guard.d  .healer.d  .house.d  .lands_of_chaos.d  .legend.d  .lockers.d  .mail.d  .metaphys.d  .mobact.d  .muckle.d  .perceptory.d  .portal.d  .qpshop.d  .renames.d  .reward.d  .scatter.d  .seek.d  .shop.d  .special.d  .superAggr.d  .ten_trials.d  .torment.d  .unicorn.d  Makefile  Makefile.in  advance.c  advance.h  assign.c  (+48 more)
ravenOpen/src/lib/util/: .strlcpy.d  .track.d  .utils.d  .weather.d  .zmalloc.d  Makefile  Makefile.in  strlcpy.c  track.c  track.h  utils.c  utils.h  weather.c  zmalloc.c
ravenOpen/sys/etc/: players
ravenOpen/sys/lockers/: z
ravenOpen/sys/misc/: messages  socials
ravenOpen/sys/plrobjs/F-J/: ikarus.objs
ravenOpen/sys/plrobjs/P-T/: thief.objs
ravenOpen/sys/plrtext/A-E/: deleted
ravenOpen/sys/plrtext/F-J/: deleted
ravenOpen/sys/plrtext/K-O/: deleted
ravenOpen/sys/plrtext/P-T/: deleted
ravenOpen/sys/plrtext/U-Z/: deleted
ravenOpen/sys/quests/A-E/: deleted
ravenOpen/sys/quests/F-J/: deleted
ravenOpen/sys/quests/K-O/: deleted
ravenOpen/sys/quests/P-T/: deleted
ravenOpen/sys/quests/U-Z/: deleted
ravenOpen/sys/text/: background  handbook  immlist  imotd  motd  news  policies  wizlist
ravenOpen/sys/text/help/: help  help.hlp  help.hlp.bak  ihelp
ravenOpen/sys/world/mob/: 0.mob  1.mob  12.mob  180.mob  30.mob  index
ravenOpen/sys/world/qst/: 0.qst  index  index.mini
ravenOpen/sys/world/rnd/: 0.rnd  1.rnd  2.rnd  index.mini
ravenOpen/sys/world/shp/: 180.shp  30.shp  index
ravenOpen/sys/world/trg/: 0.trg  1.trg  12.trg  180.trg  30.trg  index
ravenOpen/sys/world/wld/: 0.wld  1.wld  12.wld  180.wld  30.wld  index.bak  index.mini
ravenOpen/sys/world/zon/: 0.zon  1.zon  12.zon  180.zon  30.zon  index.mini
(+206 files in other folders)
